[tool.poetry]
name = "calculators"
version = "0.1.0"
description = "Two calculators calories and cash"
authors = ["AligatorVodaema <ignatev.vsevolod@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
